# social-navigation-Unity

./: .gitignore  LICENSE  README.md
UnityProject/: README.md
UnityProject/Assets/: README.MD
UnityProject/Assets/Scripts/: BedController.cs  BoundingBoxPublisher.cs  CalculateVelocity.cs  CameraImagePublishtoROS.cs  CameraImageToOccupancyGrid.cs  CollisionDetection.cs  GameManager.cs  GetVelocityWithRigidbody.cs  HumanWaypointFollower.cs  ImageCapture.cs  ImageToWorldConversion.cs  PoseTrailVisualizer.cs  PoseTrailVisualizer_GlobalTraj.cs  PoseTrailVisualizer_Traj.cs  README.md  RandomMovement.cs  RandomWalker.cs  RobotController.cs  RobotPosePublisher.cs  RosPublisher.cs  RosPublisherCustom copy 2.cs  RosPublisherCustom copy.cs  RosPublisherCustom.cs  SmoothRandomWalker.cs  mousePositionOnGame.cs  sendImageToROS.cs
UnityProject/Assets/Scripts/Camera(RGB)/: CameraPublisher.cs
UnityProject/Assets/Scripts/Depth Camera (RGB-D)/: RGBDCameraPublisher.cs  SimTime.cs
UnityProject/Assets/Scripts/Radar/: Radar_Simulated.cs
UnityProject/Assets/Scripts/RosMessages/Unitycustommsg/msg/: Point2DArrayMsg.cs  Point2DMsg.cs  SocialMetricsMsg.cs  TwistTransformUnityMsg.cs
UnityProject/Assets/Scripts/Velocity Command/: PathFollower.cs
floor-segmentation/: .gitignore  CMakeLists.txt  README.md  database.cpp  database.h  example.cpp  geometry.cpp  geometry.h  graph_util.cpp  graph_util.h  graph_util.tpp  grid.cpp  grid.h  grid.tpp  neo4j_demo.cpp  planning.cpp  planning.h  planning.tpp  plot.cpp  plot.h  plot.tpp  potential.cpp  potential.h  robot.cpp  robot.h  save.cpp  save.h  social_force.cpp  social_force.h  social_force.tpp  transforms.cpp  transforms.h  util.h
floor-segmentation/json/: config.json
floor-segmentation/python/: database.py  fill_database.py  fill_database_old.py  path_demo.py  social_force.py  surf_plot.py
neo4j/: README.MD  chart.drawio  query.cypher
neo4j/codes/: databaseupdate.py  def_ontology_import_updated.py  import_ontology.py  neo4j.json
neo4j/queries/: RoomsConnectedNode.cypher  alternative.cypher  alternativeusecases.cypher  general.cypher  humangrouping.cypher  robot.cypher  usecases.cypher
readmes/: database.md  navigation.md  open.md  run.md  story.md  tcpIP.md  test.md  virtual.md
ros2_ws/: README.MD  map.yaml
ros2_ws/src/ROS-TCP-Endpoint/: README.md  setup.cfg
ros2_ws/src/costmap_plugin/: CMakeLists.txt  README.md  nav2_with_human_layer.yaml  package.xml  plugins.xml
ros2_ws/src/costmap_plugin/include/costmap_plugin/: dynamic_human_layer.hpp
ros2_ws/src/costmap_plugin/map/: floor_plan_unity.pgm  map.yaml
ros2_ws/src/costmap_plugin/src/: dynamic_human_layer.cpp
ros2_ws/src/database_updater/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/database_updater/database_updater/: LoadJSON_Neo4J 2.ipynb  LogNeo4J_Advanced 1.ipynb  dynamic_object_subscriber.py  humangrouping.cypher  import_map.py  neo4j_node.py  query.cypher  record_db.py  test.py
ros2_ws/src/evaluations/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/evaluations/evaluations/: evaluations.py  evaluations_old.py  jsonpublish.py  mdo_calculator.py  metrics.py  personal.py
ros2_ws/src/evaluations/launch/: eval.launch.py
ros2_ws/src/floor_segmentation/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/floor_segmentation/src/: local_planner.cpp  local_planner_old.cpp
ros2_ws/src/human_aggregator_node/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/human_aggregator_node/human_aggregator_node/: human_aggregator_node.py
ros2_ws/src/image_subscriber/: README.md  package.xml  setup.py
ros2_ws/src/image_subscriber/image_subscriber/: image_save.py
ros2_ws/src/project_main/: README.MD  package.xml  setup.py
ros2_ws/src/project_main/launch/: project_main_launch.py
ros2_ws/src/project_main/rviz/: project.rviz  rviz.rviz
ros2_ws/src/stanley_controller/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/stanley_controller/include/stanley_controller/: stanley_controller.h
ros2_ws/src/stanley_controller/src/: stanley_controller.cpp
ros2_ws/src/transform_poses/: README.MD  package.xml  setup.cfg  setup.py
ros2_ws/src/transform_poses/transform_poses/: groups.py  tf2_pose.py
ros2_ws/src/unitycustommsg/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/unitycustommsg/msg/: Human.msg  HumanArray.msg  HumanGroup.msg  HumanGroupArray.msg  HumanInvasion.msg  HumanInvasionArray.msg  Point2DArray.msg  SocialMetrics.msg  TwistTransformUnity.msg
