cmake_minimum_required(VERSION 3.15)
project(FloorSegmentation)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -pthread)

find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_definitions(-w)  # Turn off warnings

find_package(pybind11 REQUIRED)

add_executable(example example.cpp)
add_executable(neo4j_demo neo4j_demo.cpp)
add_library(geometry geometry.cpp geometry.h)
add_library(graph_util graph_util.cpp graph_util.h graph_util.tpp)
add_library(grid grid.cpp grid.h grid.tpp)
add_library(planning planning.cpp planning.h planning.tpp)
add_library(plot plot.cpp plot.h plot.tpp)
add_library(database database.cpp database.h)
add_library(social_force social_force.cpp social_force.h social_force.tpp)
add_library(save save.cpp save.h)
add_library(robot robot.cpp robot.h)
add_library(transforms transforms.cpp transforms.h)
add_library(potential potential.cpp potential.h)
add_library(util INTERFACE)
add_library(nlohmann INTERFACE)
add_library(matrix_op INTERFACE)
target_sources(util INTERFACE util.h)
target_sources(nlohmann INTERFACE nlohmann/json.hpp)


target_link_libraries(example ${OpenCV_LIBS} geometry graph_util grid planning plot social_force database util nlohmann save potential)
target_link_libraries(graph_util grid)
target_link_libraries(grid ${OpenCV_LIBS} geometry util)
target_link_libraries(planning geometry graph_util grid util database)
target_link_libraries(social_force geometry graph_util grid planning robot transforms util potential)
target_link_libraries(plot ${OpenCV_LIBS} geometry graph_util grid planning potential)
target_link_libraries(database grid graph_util robot transforms pybind11::embed)
target_link_libraries(save graph_util grid social_force nlohmann potential)
target_link_libraries(transforms geometry robot)
target_link_libraries(neo4j_demo database robot transforms)
target_link_libraries(potential graph_util grid planning robot)
